Added endpoint to get user roles, CORS configurations and refactored code
