# controllers/usercontroller/usercontroller.go
@@ -6,7 +6,7 @@ import (
 	"strings"
 	"time"
 
-	"example/ginference-server/config/devconfig"
+	config "example/ginference-server/config/devconfig"
 	"example/ginference-server/data"
 	"example/ginference-server/models/user"
 	"example/ginference-server/utils"
@@ -34,7 +34,7 @@ func GetAllUsers(c *gin.Context) {
 	filter := bson.D{{}}
 	findOptions := options.Find()
 	var registeredUsers user.Users
-	registeredUsers, err := data.Find(registeredUsers, devconfig.DBName, devconfig.UserCollection, filter, findOptions)
+	registeredUsers, err := data.Find(registeredUsers, config.DBName, config.UserCollection, filter, findOptions)
 	if err != nil {
 		c.IndentedJSON(http.StatusInternalServerError, err.Error())
 		return
@@ -73,7 +73,7 @@ func GetUserByID(c *gin.Context) {
 	filter := bson.D{{Key: "userid", Value: userID}}
 	findOptions := options.Find()
 	var registeredUsers user.Users
-	registeredUsers, err := data.Find(registeredUsers, devconfig.DBName, devconfig.UserCollection, filter, findOptions)
+	registeredUsers, err := data.Find(registeredUsers, config.DBName, config.UserCollection, filter, findOptions)
 	if err != nil {
 		c.IndentedJSON(http.StatusInternalServerError, err.Error())
 		return
@@ -113,7 +113,7 @@ func GetUserByName(c *gin.Context) {
 	filter := bson.D{{Key: "fullname", Value: bson.Regex{Pattern: name, Options: "i"}}}
 	findOptions := options.Find()
 	var registeredUsers user.Users
-	registeredUsers, err := data.Find(registeredUsers, devconfig.DBName, devconfig.UserCollection, filter, findOptions)
+	registeredUsers, err := data.Find(registeredUsers, config.DBName, config.UserCollection, filter, findOptions)
 	if err != nil {
 		c.IndentedJSON(http.StatusInternalServerError, err.Error())
 		return
@@ -148,7 +148,7 @@ func GetUserByUserName(c *gin.Context) {
 	filter := bson.D{{Key: "username", Value: username}}
 	findOptions := options.Find()
 	var registeredUsers user.Users
-	registeredUsers, err := data.Find(registeredUsers, devconfig.DBName, devconfig.UserCollection, filter, findOptions)
+	registeredUsers, err := data.Find(registeredUsers, config.DBName, config.UserCollection, filter, findOptions)
 	if err != nil {
 		c.IndentedJSON(http.StatusInternalServerError, err.Error())
 		return
@@ -165,6 +165,46 @@ func GetUserByUserName(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, usr)
 }
 
+// @BasePath /api/v1
+
+// PingExample godoc
+// @Summary Search user role by userID
+// @Schemes
+// @Description Find the user role created with the given username
+// @Tags Users
+// @Security ApiKeyAuth
+// @Param id path string true "UserID" minlength(36) maxlength(36)
+// @Accept json
+// @Produce json
+// @Success 200 {string} role
+// @Router /users/auth/id/{id} [get]
+func GetUserRoleByID(c *gin.Context) {
+	id := c.Param("id")
+	if id == "" {
+		c.String(http.StatusBadRequest, "Please specify the userID")
+		return
+	}
+	userID, err := uuid.Parse(id)
+	if err != nil {
+		c.String(http.StatusBadRequest, fmt.Sprintf("Invalid uuid - %s", id))
+		return
+	}
+	filter := bson.D{{Key: "userid", Value: userID}}
+	findOptions := options.Find()
+	var usrs []user.UserAuth
+	usrs, err = data.Find(usrs, config.DBName, config.AuthCollection, filter, findOptions)
+	if err != nil || len(usrs) == 0 {
+		c.String(http.StatusNotFound, fmt.Sprintf("No users found with the userID - %s", id))
+		return
+	}
+	usr, err := utils.First(usrs)
+	if err != nil {
+		c.String(http.StatusInternalServerError, err.Error())
+		return
+	}
+	c.IndentedJSON(http.StatusOK, usr.Role)
+}
+
 func CreateNewUser(c *gin.Context) {
 	var newUser user.UserCreate
 	if err := c.BindJSON(&newUser); err != nil {
@@ -174,7 +214,7 @@ func CreateNewUser(c *gin.Context) {
 	filter := bson.D{{Key: "username", Value: newUser.UserName}}
 	findOptions := options.Find()
 	var registeredUsers user.Users
-	registeredUsers, err := data.Find(registeredUsers, devconfig.DBName, devconfig.UserCollection, filter, findOptions)
+	registeredUsers, err := data.Find(registeredUsers, config.DBName, config.UserCollection, filter, findOptions)
 	if err != nil {
 		c.IndentedJSON(http.StatusInternalServerError, err.Error())
 		return
@@ -194,7 +234,7 @@ func CreateNewUser(c *gin.Context) {
 	usr.FullName = strings.Join([]string{newUser.FirstName, newUser.LastName}, " ")
 	usr.CreatedAt = time.Now()
 	usr.ModifiedAt = time.Now()
-	if err := data.Create(usr, devconfig.DBName, devconfig.UserCollection); err != nil {
+	if err := data.Create(usr, config.DBName, config.UserCollection); err != nil {
 		c.IndentedJSON(http.StatusInternalServerError, err.Error())
 		return
 	}
@@ -223,7 +263,7 @@ func EditUser(c *gin.Context) {
 	filter := bson.D{{Key: "userid", Value: usrUpdate.UserID}}
 	findOptions := options.Find()
 	var registeredUsers user.Users
-	registeredUsers, err := data.Find(registeredUsers, devconfig.DBName, devconfig.UserCollection, filter, findOptions)
+	registeredUsers, err := data.Find(registeredUsers, config.DBName, config.UserCollection, filter, findOptions)
 	if err != nil {
 		c.IndentedJSON(http.StatusInternalServerError, err.Error())
 		return
@@ -245,7 +285,7 @@ func EditUser(c *gin.Context) {
 	usr.Phone = usrUpdate.Phone
 	usr.CountryCode = usrUpdate.CountryCode
 	usr.ModifiedAt = time.Now()
-	if err := data.EditOne(usr, devconfig.DBName, devconfig.UserCollection, filter, updateOptions); err != nil {
+	if err := data.EditOne(usr, config.DBName, config.UserCollection, filter, updateOptions); err != nil {
 		c.IndentedJSON(http.StatusConflict, err.Error())
 		return
 	}
